First version of setting- and pair screen done

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "compatibility": ">=1.5.0",
   "sdk": 2,
   "name": {
-    "en": "Moehlenhoff"
+    "en": "Möhlenhoff"
   },
   "description": {
     "en": "Adds support for Moehlenhoff's OEM Alpha 2 system"
@@ -20,5 +20,35 @@
   "author": {
     "name": "Kai André Venjum",
     "email": "kai.andre@venjum.com"
-  }
+  },
+  "drivers": [
+    {
+      "id": "alpha2",
+      "name": {
+        "en": "Alpha 2"
+      },
+      "class": "thermostat",
+      "capabilities": [
+        "target_temperature",
+        "measure_temperature"
+      ],
+      "images": {
+        "large": "/drivers/alpha2/assets/images/large.png",
+        "small": "/drivers/alpha2/assets/images/small.png"
+      },
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ]
+    }
+  ]
 }
